--- a/src/extensions/languages/German.json
+++ b/src/extensions/languages/German.json
@@ -18,7 +18,7 @@
         "cpGlobalConsole_title": "Aktivieren Sie die globale Konsole",
         "core_preferences_panels_touchbar_label": "Einstellungen: Touch Bar",
         "none": "Keiner",
-        "shareDetails_Vimeo": "Typ: Vimeo\nEinloggen Einloggen}\nTitel:%{Titel}",
+        "shareDetails_Vimeo": "Typ: Vimeo\nEinloggen %{login}\nTitel: %{title}",
         "finalcutpro_timeline_colorboard_label": "Zeitleiste: Farbtafel",
         "core_streamdeck_manager_label": "Krippe: Stream Deck",
         "enterFinderTag": "Bitte geben Sie den Finder-Tag ein, den Sie verwenden möchten:",
@@ -44,16 +44,15 @@
         "midiResetAll": "Alle Anwendungen zurücksetzen",
         "pluginsUnableToEnable": "Das Plugin \"%{pluginName}\" konnte nicht aktiviert werden.",
         "fcpx_command_group": "Final Cut Pro",
-        "cpSaveKeywordPreset_customTitle": "Keyword-Vorgabe speichern%{count}",
+        "cpSaveKeywordPreset_customTitle": "Keyword-Vorgabe speichern %{count}",
         "notificationsPanelLabel": "Benachrichtigungen",
         "color": "Farbe",
-        "menuChoiceSubText": "Menü:%{Pfad}",
+        "menuChoiceSubText": "Menü: %{path}",
         "deleteNote": "Stellen Sie sicher, dass in den Einstellungen von Final Cut Pro <strong> In Kassettenarchiv speichern </ strong> ausgewählt ist.",
         "cpVideoEffect9_title": "Anwenden des Videoeffekts 9",
         "plugin_action_errorLog": "Fehlerprotokoll",
         "shortcutAlreadyInUse": "Diese Verknüpfung wird bereits verwendet.",
         "polyphonicKeyPressure": "Polyphonic Key Druck",
-        "feedbackError": "Beim Versuch, mit den CommandPost-Servern zu kommunizieren, ist ein Fehler aufgetreten.\n\nLeider wurde dein Feedback nicht übermittelt.\n\nBitte versuche es erneut.",
         "finalcutpro_browser_keywords_label": "Browser: Keyword-Funktionen",
         "cpZoomToSelection_title": "Zoom auf Auswahl",
         "midiResetAllConfirmation": "Dadurch werden alle MIDI-Elemente in allen Anwendungen auf die Standardwerte zurückgesetzt.",
@@ -81,7 +80,7 @@
         "videoEffect_group": "Videoeffekt",
         "enableWaveformDrawing": "Aktivieren Sie das Wellenform-Zeichnen",
         "showGenerators": "Zeige Generatoren",
-        "hudButtonItem": "Schaltfläche%{Anzahl} (%{title})",
+        "hudButtonItem": "Schaltfläche %{count} (%{title})",
         "customPrefixError": "Dieses Präfix ist ungültig. Bitte versuche es erneut.",
         "openDictationPreferences": "Diktateinstellungen öffnen ...",
         "credits": "Kredite",
@@ -122,7 +121,7 @@
         "cpStepMoveLeft_title": "Schritt Bewegtes fokussiertes Fenster: Links",
         "openContacts": "Kontakte öffnen",
         "core_accessibility_label": "Zugänglichkeitsberechtigungen",
-        "shareDetails_export": "Typ: Lokaler Export\nOrt:%{Ergebnis}",
+        "shareDetails_export": "Typ: Lokaler Export\nOrt: %{result}",
         "midiResetGroup": "Ausgewählte Anwendung zurücksetzen",
         "pluginsDisableCheck": "Möchtest du dieses Plugin wirklich deaktivieren?",
         "master": "Meister",
@@ -198,7 +197,7 @@
         "changeBackupIntervalTextbox": "Worauf möchten Sie Ihr Final Cut Pro Backup-Intervall (in Minuten) einstellen?",
         "cpStepMoveUp_title": "Schritt Fokusfenster bewegen: Hoch",
         "attachLog": "Fehlerprotokoll anhängen",
-        "shareDetails_Youku": "Typ: Youku\nEinloggen Einloggen}\nTitel:%{Titel}",
+        "shareDetails_Youku": "Typ: Youku\nEinloggen: %{login}\nTitel: %{title}",
         "noteOff": "Hinweis Aus",
         "bugReport": "Fehlerbericht",
         "cpLaunchFinalCutPro_title": "Starten Sie Final Cut Pro",
@@ -237,7 +236,7 @@
         "openErrorLog": "Öffnen Sie das Fehlerprotokoll",
         "developer": "Entwicklerwerkzeuge",
         "core_preferences_panels_midi_label": "Einstellungen: MIDI",
-        "cpPuckDirection_customTitle": "Wählen Sie%{panel} Puck%{count} &%{direction}",
+        "cpPuckDirection_customTitle": "Wählen Sie %{panel} Puck %{count} & %{direction}",
         "enterCustomFilename": "Bitte geben Sie einen benutzerdefinierten Dateinamen ein",
         "customTouchBar": "Benutzerdefinierte Touchbar",
         "finalcutpro_fullscreen_shortcuts_label": "Vollbild Shortcuts",
@@ -252,7 +251,7 @@
         "pleaseTryAgain": "Bitte versuche es erneut.",
         "iMessageMissingDestination": "Telefonnummer oder Apple ID erforderlich",
         "introText": "Vielen Dank für die Installation von CommandPost. Dieser Leitfaden hilft Ihnen beim Einrichten.",
-        "shareUnknown": "Typ:%{Typ}",
+        "shareUnknown": "Typ: %{type}",
         "menubarHeading": "Menüleiste",
         "finalcutpro_timeline_movetoplayhead_label": "Zeitleiste: Zum Abspielkopf wechseln",
         "watchFolders": "Ordner ansehen",
@@ -261,7 +260,7 @@
         "global_command_group": "Alle Anwendungen",
         "rectangle": "Rechteck",
         "needUserAndAppAPIKey": "Sie müssen einen Benutzer- und Anwendungs-API-Schlüssel eingeben, um fortzufahren.",
-        "cmdDoesNotExistError": "Es konnte kein Befehl mit der ID%{id} gefunden werden.",
+        "cmdDoesNotExistError": "Es konnte kein Befehl mit der ID %{id} gefunden werden.",
         "apiKeysValidated": "Ihre API-Schlüssel, die Sie eingegeben haben, wurden erfolgreich validiert.",
         "refreshMidi": "Aktualisieren Sie MIDI-Geräte",
         "toggleAutomaticScriptReloading": "Automatisch neu laden",
@@ -279,13 +278,13 @@
         "continue": "Fortsetzen",
         "watchFolderFCPMediaHelp": "Mit dieser Funktion können Sie Mac OS-Notfictions erhalten, wenn unterstützte Dateien in einem der unten aufgeführten Überwachungsordner hinzugefügt werden. Von der Benachrichtigung aus können Sie dann diese Dateien direkt in Ihre aktuelle Final Cut Pro-Timeline <b> importieren </ b> kopieren. Wenn Sie <b> SHIFT </ b> gedrückt halten, während Sie <b> Importieren </ b> drücken, werden alle ausstehenden Dateien importiert.",
         "midiTopDeviceToAll": "Dadurch wird das MIDI-Gerät am Anfang der Liste auf alle folgenden Zeilen der aktuellen Anwendung angewendet.",
-        "shareDetails_Facebook": "Typ: Facebook\nEinloggen Einloggen}\nTitel:%{Titel}",
+        "shareDetails_Facebook": "Typ: Facebook\nEinloggen: %{login}\nTitel: %{title}",
         "cpMoveAndResizeCornerSouthEast_title": "Verschieben und Größe des fokussierten Fensters ändern: Untere rechte Ecke",
         "core_watchfolders_menuitem_label": "Watch Folder Menüeintrag",
         "pushoverTestFailed": "Sie müssen sowohl einen Benutzer- als auch einen Anwendungs-API-Schlüssel eingeben und dann auf die Schaltfläche \"Validieren\" klicken, bevor Sie Pushover-Benachrichtigungen testen können.",
         "getCommandPostPushoverAPIKey": "Erstellen Sie einen Anwendungs-API-Schlüssel",
         "cpVideoEffect8_title": "Anwenden des Videoeffekts 8",
-        "cpPuck_customTitle": "Wählen Sie%{panel} Puck%{count}",
+        "cpPuck_customTitle": "Wählen Sie %{panel} Puck %{count}",
         "plugin_status_loaded": "Geladen",
         "cpLeaveInPlaceOff_title": "Deaktivieren Sie In Place beim Importieren",
         "actionHiddenText": "%{text} [Versteckt]",
@@ -319,7 +318,7 @@
         "cpOpenErrorLog_title": "Öffnen Sie das Fehlerprotokoll",
         "channelPressure": "Kanaldruck",
         "enableRenderingDuringPlayback": "Aktivieren Sie das Rendern während der Wiedergabe",
-        "cpCutSwitchAudioAngle_customTitle": "Schnitt n Schalter Tonwinkel%{count}",
+        "cpCutSwitchAudioAngle_customTitle": "Schnitt n Schalter Tonwinkel %{count}",
         "displayThisMenuAsIcon": "Menüleiste als Symbol anzeigen",
         "fileCouldNotBeRead": "Die ausgewählte Datei konnte nicht gelesen werden.",
         "helpandsupport_group": "Hilfe Unterstützung",
@@ -335,7 +334,7 @@
         "commandLineToolDescription": "Wenn das Befehlszeilentool installiert ist, können Sie <strong> cmdpost </ strong> im Terminal verwenden, um den Lua-Code auszulösen. Weitere Informationen finden Sie im Benutzerhandbuch.",
         "finalcutpro_timeline_zoomtoselection_label": "Zeitleiste: Zoom auf Auswahl",
         "showSourceTimecodeBottom": "Zeige den Quell-Timecode unten",
-        "cpCutSwitchVideoAngle_customTitle": "Schnitt n Umschalten Videowinkel%{count}",
+        "cpCutSwitchVideoAngle_customTitle": "Schnitt n Umschalten Videowinkel %{count}",
         "touchBarResetConfirmation": "Dadurch werden alle geänderten Touch Bar-Elemente auf die Standardwerte zurückgesetzt.",
         "tangentPanelTooltip": "Tangenteneinstellungen",
         "commonErrorMessageEnd": "Möchten Sie einen Fehlerbericht einreichen?",
@@ -361,7 +360,7 @@
         "language": "Sprache",
         "menubarPanelTooltip": "Menüleiste Einstellungen",
         "fcpx_audioEffect_action": "Audioeffekte",
-        "cpPuckMousePanel_customTitle": "Maussteuerung%{panel} Puck%{count}",
+        "cpPuckMousePanel_customTitle": "Maussteuerung %{panel} Puck %{count}",
         "activatorUnfavoriteAction": "Unhöflich",
         "fcpx_videoEffect_action": "Videoeffekte",
         "selectVoice": "Wählen Sie Sprache",
@@ -482,7 +481,7 @@
         "cpRevealMulticamClipInAngleEditorAndHighlight_title": "Reveal Multicam Clip im Angle Editor",
         "enableFilenamePrefix": "Aktivieren Sie den Dateinamen Präfix",
         "quality": "Qualität",
-        "shareDetails_youtube": "Typ: YouTube\nEinloggen Einloggen}\nTitel:%{Titel}",
+        "shareDetails_youtube": "Typ: YouTube\nEinloggen: %{login}\nTitel: %{title}",
         "highlightedItem": "Hervorgehobenes Element",
         "eight": "8",
         "all": "Alle",
@@ -545,7 +544,7 @@
         "midi": "MIDI",
         "streamdeckPanelTooltip": "Stream-Deck-Einstellungen",
         "fcpx_widgets_action": "Touchbar-Widgets",
-        "cpCutSwitchBothAngle_customTitle": "Cut n Switch Beide Winkel%{count}",
+        "cpCutSwitchBothAngle_customTitle": "Cut n Switch Beide Winkel %{count}",
         "finalcutpro_menu_viewer_label": "Menüleiste: Betrachter",
         "sendToCompressor": "Senden an Compressor",
         "transition_group": "Übergang",
@@ -573,7 +572,7 @@
         "location": "Ort",
         "changeDestinationFolder": "Zielordner wechseln",
         "hacksShortcutsRestart": "CommandPost-Verknüpfungen in Final Cut Pro benötigen Ihr Administratorkennwort und müssen Final Cut Pro neu starten, bevor es wirksam werden kann.",
-        "cpSelectClipAtLane_customTitle": "Wählen Sie Clip bei Lane%{count}",
+        "cpSelectClipAtLane_customTitle": "Wählen Sie Clip bei Lane %{count}",
         "cpShowGrid_title": "Fenstergitter anzeigen",
         "finalcutpro_preferences_scanfinalcutpro_label": "Einstellungen: Scannen Sie Final Cut Pro",
         "cpPlay_title": "abspielen",
@@ -616,7 +615,7 @@
         "showTimelineInPlayer": "Zeitleiste im Player anzeigen",
         "showTitles": "Titel anzeigen",
         "cpCreateMulticamOptimizedMediaOff_title": "Deaktivieren Sie Multicam Optimized Media",
-        "commandChoiceSubText": "Befehl:%{Gruppe}",
+        "commandChoiceSubText": "Befehl: %{group}",
         "cpGenerator3_title": "Wenden Sie Generator 3 an",
         "commandPost_group": "Befehlspost",
         "selectCompressorDestination": "Wählen Sie einen Zielordner aus:",
@@ -639,7 +638,7 @@
         "cpChangeTimelineClipHeightUp_title": "Timeline Clip Height Increase",
         "removeFromList": "Aus Liste entfernen",
         "appName": "Befehlspost",
-        "shareDetails_Tudou": "Typ: Tudou\nEinloggen Einloggen}\nTitel:%{Titel}",
+        "shareDetails_Tudou": "Typ: Tudou\nEinloggen: %{login}\nTitel: %{title}",
         "showInspector": "Zeige Inspektor",
         "yellow": "Gelb",
         "cpConsole_title": "Aktivieren Sie die Konsole",
@@ -657,14 +656,13 @@
         "launchAtStartup": "Beim Start starten",
         "programChange": "Programmwechsel",
         "webappEnable": "Aktivieren Sie WebApp",
-        "cpSelectColorBoardPuck_customTitle": "Wähle Farbkarten-Puck%{count}",
+        "cpSelectColorBoardPuck_customTitle": "Wähle Farbkarten-Puck %{count}",
         "core_helpandsupport_credits_label": "Hilfe & Support: Danksagung",
         "done": "Erledigt",
         "updateAvailable": "Update verfügbar",
         "shortcutCouldNotBeTriggered": "Diese Verknüpfung konnte nicht ausgelöst werden.\n\nÜberprüfen Sie, ob Sie gültige Tastenkombinationen für den Befehl, den Sie im Final Cut Pro-Befehlseditor versucht haben, zugewiesen haben, und versuchen Sie es erneut.",
         "whatWentWrong": "Was schief gelaufen ist?",
         "core_preferences_updates_label": "Einstellungen: Updates",
-        "deleteAfterImport": "Datei vom Überwachungsordner löschen (5 Sekunden nach dem Import)",
         "enableMIDI": "Aktivieren Sie MIDI-Steuerelemente",
         "failedToRestart": "Final Cut Pro konnte nicht neu gestartet werden. Sie müssen manuell neu starten.",
         "fcpx_midicontrols_action": "MIDI-Steuerelemente",
@@ -707,14 +705,14 @@
         "howCanWeHelp": "Wie können wir Ihnen helfen?",
         "core_menu_top_label": "Menüleiste: Oberer Abschnitt",
         "generalPanelLabel": "Allgemeines",
-        "cpPuckMouse_customTitle": "Maussteuerungs-Puck%{count}",
+        "cpPuckMouse_customTitle": "Maussteuerungs-Puck %{count}",
         "finalcutpro_touchbar_virtual_label": "Virtuelle Touchleiste",
         "scrollingTimelineActivated": "Scrolling Timeline aktiviert",
         "cpMoveToPlayhead_title": "Zum Abspielkopf wechseln",
         "core_touchbar_widgets_volume_label": "Widget: Lautstärkeregler",
         "incomingFile": "Eingehende Datei ...",
         "cpCreateOptimizedMediaOff_title": "Deaktivieren Sie die Option Optimierte Medien erstellen",
-        "shareSuccessful": "Share Erfolgreich\n%{Info}",
+        "shareSuccessful": "Share Erfolgreich\n%{info}",
         "normal": "Normal",
         "notValidProwlAPIKeyError": "Der Prowl-API-Schlüssel konnte aufgrund des folgenden Fehlers nicht validiert werden:",
         "custom": "Brauch",
@@ -757,7 +755,7 @@
         "cpTransition9_title": "Übernehmen Sie Übergang 9",
         "offline": "Offline",
         "finalcutpro_hacks_movingmarkers_label": "Bewegende Hersteller",
-        "cpRestoreKeywordPreset_customTitle": "Keyword-Vorgabe wiederherstellen%{count}",
+        "cpRestoreKeywordPreset_customTitle": "Keyword-Vorgabe wiederherstellen %{count}",
         "core_menu_bottom_label": "Menüleiste: Unterer Abschnitt",
         "currentIncrementalNumber": "Inkrementelle Nummer",
         "cpAudioEffect2_title": "Wenden Sie Audioeffekt 2 an",
@@ -895,7 +893,6 @@
         "controlFCPUIElementAbsolute": "controlFCPUIElementAbsolute",
         "controlFCPUIElementRelative": "controlFCPUIElementRelativ",
         "controlFCPUIElementRelativeNote": "controlFCPUIElementRelativeNote",
-        "copyToFinalCutProPasteboardBuffer": "copyToFinalCutProPasteboardBuffer",
         "core_disk_automount_label": "core_disk_automount_label",
         "core_helpandsupport_errorlog_label": "core_helpandsupport_errorlog_label",
         "core_midi_controls_banks_label": "core_midi_controls_banks_label",
@@ -950,9 +947,6 @@
         "edit": "bearbeiten",
         "empty": "leer",
         "enable": "aktivieren",
-        "enableBackgroundRender": {
-            "one": "enableBackgroundRender",
-        },
         "enableDisableBalanceColor": "enableDisableBalanceColor",
         "enableEGPUSupport": "Aktivieren Sie den EGPUS-Support",
         "enablePasteboardHistory": "enablePasteboardHistory",
@@ -965,21 +959,11 @@
         "fcpMediaFolder_Error_NoFiles": "fcpMediaFolder_Error_NoFiles",
         "fcpMediaFolder_Error_ProjectRequire": "fcpMediaFolder_Error_ProjectRequire",
         "fcpMediaFolder_Error_ShowTimeline": "fcpMediaFolder_Error_ShowTimeline",
-        "fcpMediaFolder_Error_UnableToPaste": {
-            "one": "fcpMediaFolder_Error_UnableToPaste",
-        },
         "fcpMediaFolderCancel": "fcpMediaFolderCancel",
         "fcpMediaFolderImport": "fcpMediaFolderImport",
         "fcpMediaFolderImportAll": "fcpMediaFolderImportAll",
-        "fcpMediaFolderIncomingSubTitle": {
-            "one": "fcpMediaFolderIncomingSubTitle",
-        },
-        "fcpMediaFolderReadySubTitle": {
-            "one": "fcpMediaFolderReadySubTitle",
-        },
         "fcpMediaFolderRevealInFinder": "fcpMediaFolderRevealInFinder",
         "fcpMediaWatchFolderTitle": "fcpMediaWatchFolderTitle",
-        "fcpShortcut_NoShortcutAssigned": "fcpShortcut_NoShortcutAssigned",
         "fcpx_fonts_action": "fcpx_fonts_action",
         "finalcutpro_browser_pasteboardtomarkers_label": "finalcutpro_browser_pasteboardtomarkers_label",
         "finalcutpro_bugfix_clipselection_label": "finalcutpro_bugfix_klippelauswahllabel",
@@ -1043,9 +1027,6 @@
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "ignoreESCKeyWhenFinalCutProIsFullscreen",
         "inspector": "Inspektor",
         "invalidFCPUIElement": "invalidFCPUIElement",
-        "item": {
-            "one": "Artikel",
-        },
         "joinClips": "JoinClips",
         "justifyAll_title": "justifyAll_title",
         "justifyLastCentre_title": "justifyLastCentre_title",
@@ -1057,7 +1038,6 @@
         "layout": "Layout",
         "left": "links",
         "leftVertical": "linksVertikal",
-        "LibrariesBrowser_NoClipTitled": "LibrariesBrowser_NoClipTitled",
         "listenMMC": "listenMMC",
         "listenMTC": "Hör zuMTC",
         "localPasteboardHistory": "localPasteboardHistory",
@@ -1077,9 +1057,6 @@
         "midiVideoInspector": "midiVideoInspektor",
         "midtones2": "Mitteltöne2",
         "midtones4": "Mitteltöne4",
-        "mins": {
-            "one": "Minuten",
-        },
         "mix": "mischen",
         "mix4": "mix4",
         "modifier": "Modifikator",
@@ -1106,7 +1083,6 @@
         "pasteboardToMarkers_title": "pasteboardToMarkers_title",
         "pasteboardToMarkersCompleted": "pasteboardToMarkersCompleted",
         "pasteboardToMarkersFailed": "pasteboardToMarkersFailed",
-        "pasteFromFinalCutProPasteboardBuffer": "pasteFromFinalCutProPasteboardBuffer",
         "pause": "Pause",
         "percentage3": "Prozentsatz3",
         "play": "abspielen",
@@ -1133,16 +1109,9 @@
         "save": "sparen",
         "saveColorEffectPreset": "saveColorEffectPreset",
         "saveCurrentFrameToStillsMemory": "saveCurrentFrameToStillsMemory",
-        "savedToPasteboardBuffer": "savedToPasteboardBuffer",
         "scanFinalCutProSetupOne": "scanFinalCutProSetupOne",
         "scanFinalCutProSetupTwo": "scanFinalCutProSetupTwo",
         "scanningInProgress": "scanningInProgress",
-        "second": {
-            "one": "zweite",
-        },
-        "secs": {
-            "one": "Sekunden",
-        },
         "segments": "Segmente",
         "selectLeftAudioEdge": "selectLeftAudioEdge",
         "selectLeftEdge": "selectLeftEdge",
@@ -1200,7 +1169,6 @@
         "volume": "Volumen",
         "volume10": "Volumen10",
         "volume9": "Volumen9",
-        "watchFolderAddFinderTag": "watchFolderAddFinderTag",
         "white": "Weiß",
         "windowManagement": "windowManagement",
         "zoomToFit": "zoomToFit",
