--- a/src/extensions/languages/Japanese.json
+++ b/src/extensions/languages/Japanese.json
@@ -47,13 +47,12 @@
         "cpSaveKeywordPreset_customTitle": "キーワードプリセットを保存％{count}",
         "notificationsPanelLabel": "通知",
         "color": "色",
-        "menuChoiceSubText": "メニュー：％{パス}",
+        "menuChoiceSubText": "メニュー：％{path}",
         "deleteNote": "「Final Cut Pro」の「環境設定」で<strong>ライブラリの保存場所にコピー</ strong>を選択してください。",
         "cpVideoEffect9_title": "ビデオエフェクト9を適用",
         "plugin_action_errorLog": "エラーログ",
         "shortcutAlreadyInUse": "このショートカットはすでに使用されています。",
         "polyphonicKeyPressure": "ポリフォニックキーの圧力",
-        "feedbackError": "CommandPostサーバーとの通信中にエラーが発生しました。\n\n残念ながら、あなたのフィードバックは提出されませんでした。\n\nもう一度お試しください。",
         "finalcutpro_browser_keywords_label": "ブラウザ：キーワード機能",
         "cpZoomToSelection_title": "選択範囲を拡大",
         "midiResetAllConfirmation": "これにより、すべてのアプリケーションのすべてのMIDI項目がデフォルト値にリセットされます。",
@@ -288,7 +287,7 @@
         "cpPuck_customTitle": "％{panel}パック{％}を選択してください",
         "plugin_status_loaded": "ロードされた",
         "cpLeaveInPlaceOff_title": "インポート時にそのままにする機能を無効にする",
-        "actionHiddenText": "％{テキスト} [非表示]",
+        "actionHiddenText": "％{text} [非表示]",
         "finalcutpro_text2speech_label": "テキスト音声変換",
         "visibility": "可視性",
         "cpRevealMulticamClipInBrowserAndHighlight_title": "ブラウザでマルチクリップを公開",
@@ -664,7 +663,6 @@
         "shortcutCouldNotBeTriggered": "このショートカットを起動できませんでした。\n\nFinal Cut Proコマンドエディタでトリガしようとしたコマンドに割り当てられた有効なショートカットキーが選択されていることを確認して、もう一度やり直してください。",
         "whatWentWrong": "何が悪かったのか？",
         "core_preferences_updates_label": "環境設定：アップデート",
-        "deleteAfterImport": "ウォッチフォルダからのファイルの削除（インポート後5秒）",
         "enableMIDI": "MIDIコントロールを有効にする",
         "failedToRestart": "Final Cut Proの再起動に失敗しました。手動で再起動する必要があります。",
         "fcpx_midicontrols_action": "MIDIコントロール",
