--- a/src/extensions/languages/Norwegian.json
+++ b/src/extensions/languages/Norwegian.json
@@ -53,7 +53,6 @@
         "plugin_action_errorLog": "Feillogg",
         "shortcutAlreadyInUse": "Denne snarveien er allerede i bruk.",
         "polyphonicKeyPressure": "Flertastetrykk",
-        "feedbackError": "Det oppstod en feil under forsøk på å kommunisere med CommandPost-serverne.\n\nDessverre ble ikke tilbakemeldingen din sendt inn.\n\nVennligst prøv igjen.",
         "finalcutpro_browser_keywords_label": "Browser: Søkeordfunksjoner",
         "cpZoomToSelection_title": "Zoom til utvalg",
         "midiResetAllConfirmation": "Dette vil nullstille alle MIDI-innstillinger i alle applikasjoner til standardverdiene.",
@@ -482,7 +481,7 @@
         "cpRevealMulticamClipInAngleEditorAndHighlight_title": "Avslør Multicam Clip i Angle Editor",
         "enableFilenamePrefix": "Aktiver filnavn prefikset",
         "quality": "Kvalitet",
-        "shareDetails_youtube": "Skriv inn: YouTube\nLogg inn:%{login}\nTittel:%{title}",
+        "shareDetails_youtube": "Skriv inn: YouTube\nLogg inn: %{login}\nTittel: %{title}",
         "highlightedItem": "Uthevet element",
         "eight": "8",
         "all": "Alle",
@@ -545,7 +544,7 @@
         "midi": "MIDI",
         "streamdeckPanelTooltip": "Streamdekkinnstillinger",
         "fcpx_widgets_action": "Trykk på Bar Widgets",
-        "cpCutSwitchBothAngle_customTitle": "Klipp n Bytt både vinkel%{count}",
+        "cpCutSwitchBothAngle_customTitle": "Klipp n Bytt både vinkel %{count}",
         "finalcutpro_menu_viewer_label": "Menylinje: Viewer",
         "sendToCompressor": "Send til kompressor",
         "transition_group": "Overgang",
@@ -573,7 +572,7 @@
         "location": "plassering",
         "changeDestinationFolder": "Endre destinasjonsmappe",
         "hacksShortcutsRestart": "CommandPost-snarveier i Final Cut Pro krever administratorpassordet ditt og trenger også Final Cut Pro for å starte om igjen før det kan ta innvirkning.",
-        "cpSelectClipAtLane_customTitle": "Velg Clip på Lane%{count}",
+        "cpSelectClipAtLane_customTitle": "Velg Clip på Lane %{count}",
         "cpShowGrid_title": "Vis vinduet",
         "finalcutpro_preferences_scanfinalcutpro_label": "Innstillinger: Scan Final Cut Pro",
         "cpPlay_title": "Spille",
@@ -616,7 +615,7 @@
         "showTimelineInPlayer": "Vis tidslinje i spiller",
         "showTitles": "Vis titler",
         "cpCreateMulticamOptimizedMediaOff_title": "Deaktiver Multicam Optimized Media",
-        "commandChoiceSubText": "Kommando:%{group}",
+        "commandChoiceSubText": "Kommando: %{group}",
         "cpGenerator3_title": "Påfør Generator 3",
         "commandPost_group": "CommandPost",
         "selectCompressorDestination": "Velg en destinasjonsmappe:",
@@ -639,7 +638,7 @@
         "cpChangeTimelineClipHeightUp_title": "Tidslinjeklipp høydeøkning",
         "removeFromList": "Fjern fra liste",
         "appName": "CommandPost",
-        "shareDetails_Tudou": "Type: Tudou\nLogg inn:%{login}\nTittel:%{title}",
+        "shareDetails_Tudou": "Type: Tudou\nLogg inn: %{login}\nTittel: %{title}",
         "showInspector": "Vis inspektør",
         "yellow": "Gul",
         "cpConsole_title": "Aktiver konsoll",
@@ -657,14 +656,13 @@
         "launchAtStartup": "Start ved oppstart",
         "programChange": "Program Endring",
         "webappEnable": "Aktiver WebApp",
-        "cpSelectColorBoardPuck_customTitle": "Velg Color Board Puck%{count}",
+        "cpSelectColorBoardPuck_customTitle": "Velg Color Board Puck %{count}",
         "core_helpandsupport_credits_label": "Hjelp og støtte: Kreditt",
         "done": "Ferdig",
         "updateAvailable": "Oppdatering tilgjengelig",
         "shortcutCouldNotBeTriggered": "Denne snarveien kunne ikke utløses.\n\nKontroller at du har gyldige hurtigtaster som er tilordnet kommandoen du har prøvd å utløse i Final Cut Pro Command Editor, og prøv igjen.",
         "whatWentWrong": "Hva gikk galt?",
         "core_preferences_updates_label": "Innstillinger: Oppdateringer",
-        "deleteAfterImport": "Slett fil fra Watch Folder (5 sekunder etter Import)",
         "enableMIDI": "Aktiver MIDI-kontroller",
         "failedToRestart": "Det ble ikke klart å starte Final Cut Pro. Du må starte på nytt manuelt.",
         "fcpx_midicontrols_action": "MIDI-kontroller",
@@ -707,14 +705,14 @@
         "howCanWeHelp": "Hvordan kan vi hjelpe deg?",
         "core_menu_top_label": "Menylinje: Toppseksjon",
         "generalPanelLabel": "Generell",
-        "cpPuckMouse_customTitle": "Muskontroll Puck%{count}",
+        "cpPuckMouse_customTitle": "Muskontroll Puck %{count}",
         "finalcutpro_touchbar_virtual_label": "Virtual Touch Bar",
         "scrollingTimelineActivated": "Rulling Tidslinje aktivert",
         "cpMoveToPlayhead_title": "Flytt til Playhead",
         "core_touchbar_widgets_volume_label": "Widget: Volume Slider",
         "incomingFile": "Innkommende fil ...",
         "cpCreateOptimizedMediaOff_title": "Deaktiver Opprett optimalisert media",
-        "shareSuccessful": "Del vellykket\n%{Informasjon}",
+        "shareSuccessful": "Del vellykket\n%{info}",
         "normal": "Normal",
         "notValidProwlAPIKeyError": "Prowl-nøkkelen Prowl kunne ikke validere på grunn av følgende feil:",
         "custom": "Tilpasset",
@@ -757,7 +755,7 @@
         "cpTransition9_title": "Bruk overgang 9",
         "offline": "offline",
         "finalcutpro_hacks_movingmarkers_label": "Moving Makers",
-        "cpRestoreKeywordPreset_customTitle": "Gjenopprett søkeordinnstilt%{count}",
+        "cpRestoreKeywordPreset_customTitle": "Gjenopprett søkeordinnstilt %{count}",
         "core_menu_bottom_label": "Menylinje: Underdel",
         "currentIncrementalNumber": "Økningsnummer",
         "cpAudioEffect2_title": "Bruk lydeffekt 2",
@@ -895,7 +893,7 @@
         "controlFCPUIElementAbsolute": "Kontroller Final Cut Pro brukergrensesnittelement (Absolutt)",
         "controlFCPUIElementRelative": "Kontroller Final Cut Pro brukergrensesnittelement (relativ)",
         "controlFCPUIElementRelativeNote": "Hold musen over et grensesnitt, hold CONTROL, og juster deretter MIDI Knob / Fader for å registrere.",
-        "copyToFinalCutProPasteboardBuffer": "Kopier til Final Cut Pro Pasteboard Buffer%{id}",
+        "copyToFinalCutProPasteboardBuffer": "Kopier til Final Cut Pro Pasteboard Buffer %{id}",
         "core_disk_automount_label": "Disk Automount",
         "core_helpandsupport_errorlog_label": "Hjelp og støtte: Feillogg",
         "core_midi_controls_banks_label": "MIDI: Banker",
@@ -950,9 +948,6 @@
         "edit": "Redigere",
         "empty": "Tømme",
         "enable": "Aktiver",
-        "enableBackgroundRender": {
-            "one": "Aktiver bakgrunnsrenter (%{count} sek)",
-        },
         "enableDisableBalanceColor": "Aktiver / deaktiver balansefarge",
         "enableEGPUSupport": "Aktiver eGPU-støtte (krever MacOS 10.13.4+)",
         "enablePasteboardHistory": "Aktiver Pasteboard History",
@@ -965,18 +960,9 @@
         "fcpMediaFolder_Error_NoFiles": "Ingen filer ble levert for import.",
         "fcpMediaFolder_Error_ProjectRequire": "Det må være en prosjekt- eller sammensatt klipp i tidslinjen.",
         "fcpMediaFolder_Error_ShowTimeline": "Kan ikke vise tidslinjen",
-        "fcpMediaFolder_Error_UnableToPaste": {
-            "one": "Kan ikke legge til '%{file}' og en annen til fortegnbordet.",
-        },
         "fcpMediaFolderCancel": "Avbryt",
         "fcpMediaFolderImport": "Import",
         "fcpMediaFolderImportAll": "Alle filer",
-        "fcpMediaFolderIncomingSubTitle": {
-            "one": "'%{file}' og en annen er innkommende ...",
-        },
-        "fcpMediaFolderReadySubTitle": {
-            "one": "En fil er klar til import.",
-        },
         "fcpMediaFolderRevealInFinder": "Reveal i Finder",
         "fcpMediaWatchFolderTitle": "FCP Media Watch Folder",
         "fcpShortcut_NoShortcutAssigned": "Ingen hurtigtaster er tilordnet for '%{id}'.",
@@ -1043,9 +1029,6 @@
         "ignoreESCKeyWhenFinalCutProIsFullscreen": "Ignorer ESC-nøkkelen når Final Cut Pro er fullskjerm",
         "inspector": "Inspektør",
         "invalidFCPUIElement": "Ugyldig brukergrensesnittelement",
-        "item": {
-            "one": "punkt",
-        },
         "joinClips": "Bli med Klipp",
         "justifyAll_title": "Rettferdiggjør alt",
         "justifyLastCentre_title": "Juster siste senter",
@@ -1077,9 +1060,6 @@
         "midiVideoInspector": "Kontrollerer Final Cut Pro Video Inspector via en MIDI Knob eller Slider",
         "midtones2": "MT",
         "midtones4": "mellomtone",
-        "mins": {
-            "one": "min",
-        },
         "mix": "Blande",
         "mix4": "Blande",
         "modifier": "modifier",
@@ -1106,7 +1086,7 @@
         "pasteboardToMarkers_title": "Lim inn markører til valgt klipp i nettleser fra tavla",
         "pasteboardToMarkersCompleted": "Kopiering av Pappersmarkører til valgt klipp i nettleser har blitt fullført.",
         "pasteboardToMarkersFailed": "Innlegget inneholder ingen tekst i ønsket format for å behandle.\n\nDu bør bruke følgende syntaks:\n\n05:00:00: Test Søkeord 1\n# 05: 01: 00: 01: Test Søkeord 2\n* 05: 02: 00: Test søkeord 3\n05:02:15: Test søkeord 4\n* 05: 03: 00: Test søkeord 5\n05:03:15: Test søkeord 6\n# 05: 03: 30: Test søkeord 7\n* 05: 04: 00: Test søkeord 8\n\nHvis a * er sted før tidskoden, vil det gjøre klippet som en favoritt mellom gjeldende tidskodeverdi og neste tidskodeverdi.\n\nHvis et # er sted før tidskoden, vil det opprette en \"To Do\" -markør.",
-        "pasteFromFinalCutProPasteboardBuffer": "Lim inn fra Final Cut Pro Pasteboard Buffer%{id}",
+        "pasteFromFinalCutProPasteboardBuffer": "Lim inn fra Final Cut Pro Pasteboard Buffer %{id}",
         "pause": "Pause",
         "percentage3": "PCT",
         "play": "Spille",
@@ -1133,16 +1113,10 @@
         "save": "Lagre",
         "saveColorEffectPreset": "Lagre Farge Effekt Forhåndsinnstilt",
         "saveCurrentFrameToStillsMemory": "Lagre gjeldende ramme til stillhetsminne",
-        "savedToPasteboardBuffer": "Lagret til Pappebuffer%{id}",
+        "savedToPasteboardBuffer": "Lagret til Pappebuffer %{id}",
         "scanFinalCutProSetupOne": "CommandPost må skanne systemet for Final Cut Pro for plugger og bevegelsesmaler.",
         "scanFinalCutProSetupTwo": "Avhengig av hvor mange plugins og effekter du har installert, kan det ta flere minutter.",
         "scanningInProgress": "Skanning pågår",
-        "second": {
-            "one": "Sekund",
-        },
-        "secs": {
-            "one": "sek",
-        },
         "segments": "segmenter",
         "selectLeftAudioEdge": "Velg Venstre lydkanten",
         "selectLeftEdge": "Velg Venstre kant",
@@ -1200,7 +1174,7 @@
         "volume": "Volum",
         "volume10": "Volum",
         "volume9": "Volum",
-        "watchFolderAddFinderTag": "Hvis du vil legge til et Finder-tag til noen%{type} Filer som er lagt til i denne mappen, vennligst skriv det under, eller trykk OK for å hoppe over:",
+        "watchFolderAddFinderTag": "Hvis du vil legge til et Finder-tag til noen %{type} Filer som er lagt til i denne mappen, vennligst skriv det under, eller trykk OK for å hoppe over:",
         "white": "Hvit",
         "windowManagement": "Vinduestyring",
         "zoomToFit": "Zoom for å passe",
