--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -408,6 +408,7 @@
         "createProxyMedia": "Create Proxy Media",
         "createRoleForVoice": "Assign Voice Role",
         "credits": "Credits",
+        "crossHair": "Cross Hair",
         "currentIncrementalNumber": "Incremental Number",
         "custom": "Custom",
         "customFilename": "Custom Filename",
@@ -689,6 +690,7 @@
         "goToRangeStart": "Go to Range Start",
         "green": "Green",
         "gridOverlay": "Grid Overlay",
+        "guide": "Guide",
         "guides": "Guides",
         "hacks_group": "Advanced Features",
         "hacksDisabling": "Disabling",
@@ -769,6 +771,7 @@
         "leaveFilesInPlaceOnImport": "Leave Files In Place On Import",
         "left": "Left",
         "leftVertical": "Left Vertical",
+        "letterbox": "Letterbox",
         "LibrariesBrowser_NoClipTitled": "No clip titled '%{title}' was found.",
         "listenMMC": "Listen to MMC Input",
         "listenMTC": "Listen to MTC Input",
@@ -781,9 +784,10 @@
         "master2": "MS",
         "master4": "Mstr",
         "matchColor": "Match Color",
+        "mattes": "Mattes",
         "media": "Media",
-        "mediaImport": "Media Import",
         "mediaImport_group": "Media Import",
+        "mediaImport": "Media Import",
         "memory": "Memory",
         "menubarHeading": "Menubar",
         "menubarPanelLabel": "Menubar",
