--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -513,6 +513,7 @@
         "fcpMediaFolderRevealInFinder": "Reveal in Finder",
         "fcpMediaWatchFolderTitle": "FCP Media Watch Folder",
         "fcpShortcut_NoShortcutAssigned": "No shortcut keys assigned for '%{id}'.",
+        "fcpx_action_action": "Actions",
         "fcpx_audioEffect_action": "Audio Effects",
         "fcpx_cmds_action": "Commands",
         "fcpx_colorInspector_action": "Color Inspector",
@@ -533,6 +534,7 @@
         "feedbackSuccess": "Your feedback was submitted successfully.\n\nThank you!",
         "fileCouldNotBeRead": "The selected file could not be read.",
         "finalCutPro": "Final Cut Pro",
+        "finalcutpro_actions_custom_label": "Shortcuts: Custom Actions",
         "finalcutpro_browser_addnote_label": "Browser: Add Note",
         "finalcutpro_browser_keywords_label": "Browser: Keyword Features",
         "finalcutpro_browser_pasteboardtomarkers_label": "Browser: Pasteboard Markers to Clip",
@@ -559,6 +561,7 @@
         "finalcutpro_hud_label": "HUD",
         "finalcutpro_import_ignorecard_label": "Ignore Cards",
         "finalcutpro_import_preferences_label": "Import Preferences",
+        "finalcutpro_inspector_text_label": "Inspector: Text",
         "finalcutpro_inspector_video_label": "Inspector: Video",
         "finalcutpro_language_label": "Final Cut Pro Languages",
         "finalcutpro_menu_administrator_advancedfeatures_label": "Menubar: Advanced Features",
@@ -634,7 +637,6 @@
         "finalcutpro_timeline_playback_label": "Timeline: Playback",
         "finalcutpro_timeline_playhead_label": "Timeline: Playhead",
         "finalcutpro_timeline_pluginactions_label": "Timeline: Plugin Actions",
-        "finalcutpro_timeline_pluginshortcuts_label": "Timeline: Plugin Shortcuts",
         "finalcutpro_timeline_preferences_label": "Timeline: Preferences",
         "finalcutpro_timeline_selectalltimelineclips_label": "Timeline: Select All Timeline Clips",
         "finalcutpro_timeline_stabilization_label": "Inspector: Stablization",
@@ -751,7 +753,7 @@
         "joinClips": "Join Clips",
         "justifyAll_title": "Justify all",
         "justifyLastCentre_title": "Justify last centre",
-        "justifyLastLeft": "Justify last left",
+        "justifyLastLeft_title": "Justify last left",
         "justifyLastRight_title": "Justify last right",
         "key": "Key",
         "keyboardShortcuts": "Keyboard Shortcuts",
