--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -169,6 +169,7 @@
         "core_helpandsupport_developerguide_label": "Help & Support: Developer Guide",
         "core_helpandsupport_donate_label": "Help & Support: Donate",
         "core_helpandsupport_errorlog_label": "Help & Support: Error Log",
+        "core_helpandsupport_facebook_label": "Help & Support: Facebook",
         "core_helpandsupport_feedback_label": "Help & Support: Feedback",
         "core_helpandsupport_userguide_label": "Help & Support: User Guide",
         "core_language_label": "Language Module",
@@ -254,6 +255,7 @@
         "cpCutSwitchVideoAngle_customTitle": "Cut n Switch Video Angle %{count}",
         "cpDeveloperGuide_title": "Developer Guide",
         "cpDisableWaveforms_title": "Toggle Waveform Drawing",
+        "cpFacebookGroup_title": "Facebook Group",
         "cpFeatureRequest_title": "Suggest Final Cut Pro Feature to Apple",
         "cpFeedback_title": "Provide Feedback",
         "cpFontConsole_title": "Open Font Console",
