#1415, #1394 * Major Rx operator cleanup * Added `cp.collect.List` * Added `do` actions to Timeline/TimelineContents/TextInspector/Inspector

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -774,8 +774,9 @@
             "other": "items"
         },
 		"justifyAll_title": "Justify all",
-		"justifyLastCentre_title": "Justify last centre",
-		"justifyLastRight_title": "Justify last right",
+        "justifyLastCentre_title": "Justify last centre",
+        "justifyLastLeft_title": "Justify last left",
+        "justifyLastRight_title": "Justify last right",
     	"key": "Key",
         "japanese": "Japanese",
         "joinClips": "Join Clips",
