Cleanup Default Shortcuts
- Removed some fairly uncommon default shortcuts

--- a/src/extensions/languages/English.json
+++ b/src/extensions/languages/English.json
@@ -377,7 +377,7 @@
         "cpToggleColorBoard_title": "Toggle Color Board Panel",
         "cpToggleMovingMarkers_title": "Toggle Moving Markers",
         "cpToggleTimecodeOverlays_title": "Toggle Timecode Overlay",
-        "cpToggleTouchBar_title": "Toggle Virtual Touch Bar (FCPX)",
+        "cpToggleTouchBar_title": "Toggle Virtual Touch Bar",
         "cpToggleVoiceCommands_title": "Toggle Voice Commands",
         "cpTouchBar_title": "Toggle Touch Bar",
         "cpTransition1_title": "Apply Transition 1",
